--- a/package.json
+++ b/package.json
@@ -1,15 +1,46 @@
 {
-  "name": "react-native-select-two",
-  "version": "1.1.0",
+  "_args": [
+    [
+      "react-native-select-two@1.1.0",
+      "/Users/dwi.dev/Documents/Works/Migration/hrdashboardpkc"
+    ]
+  ],
+  "_from": "react-native-select-two@1.1.0",
+  "_id": "react-native-select-two@1.1.0",
+  "_inBundle": false,
+  "_integrity": "sha512-lYZKwQI8qkxn/82Z9P0fIeH8YtozQT8+u2jqbC6nPRqCUzdVqSr945InMuoVl3/jJHgyrNaIksdEjXLuAikbcg==",
+  "_location": "/react-native-select-two",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "react-native-select-two@1.1.0",
+    "name": "react-native-select-two",
+    "escapedName": "react-native-select-two",
+    "rawSpec": "1.1.0",
+    "saveSpec": null,
+    "fetchSpec": "1.1.0"
+  },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/react-native-select-two/-/react-native-select-two-1.1.0.tgz",
+  "_spec": "1.1.0",
+  "_where": "/Users/dwi.dev/Documents/Works/Migration/hrdashboardpkc",
+  "author": {
+    "name": "xuho"
+  },
+  "bugs": {
+    "url": "https://github.com/xuho/react-native-select-two/issues"
+  },
   "description": "Component like Select2 on web for React Native",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "react": "16.6.1",
+    "react-native": "~0.57.7",
+    "react-native-modal": "^11.1.0",
+    "react-native-vector-icons": "^4.2.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xuho/react-native-select-two.git"
-  },
+  "homepage": "https://github.com/xuho/react-native-select-two#readme",
   "keywords": [
     "react-native",
     "react-component",
@@ -23,22 +54,21 @@
     "select2",
     "component"
   ],
-  "author": "xuho",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/xuho/react-native-select-two/issues"
-  },
-  "homepage": "https://github.com/xuho/react-native-select-two#readme",
+  "main": "index.js",
+  "name": "react-native-select-two",
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
     "react-native-vector-icons": "^4.2.0",
     "react-native-modal": "^11.1.0"
   },
-  "devDependencies": {
-    "react": "16.6.1",
-    "react-native": "~0.57.7",
-    "react-native-vector-icons": "^4.2.0",
-    "react-native-modal": "^11.1.0"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xuho/react-native-select-two.git"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "version": "1.1.0"
 }
